--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -260,7 +260,7 @@
     "description": ""
   },
   "msg_prompt_too_long": {
-    "message": "Il testo che vuoi inviare a ChatGPT è troppo lungo. Devi ridurlo per poter procedere.",
+    "message": "Il testo che vuoi inviare è troppo lungo. Devi ridurlo per poter procedere.",
     "description": ""
   },
   "prefs_OptionText_release_notes": {
