--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -260,7 +260,7 @@
     "description": ""
   },
   "msg_prompt_too_long": {
-    "message": "The text you provided is too long. You need to reduce it to use ChatGPT.",
+    "message": "The text you provided is too long. You need to reduce it.",
     "description": ""
   },
   "prefs_OptionText_release_notes": {
