max_prompt_length options added. fixes #165

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -634,5 +634,13 @@
   "prefs_OptionText_placeholders_use_default_value_info": {
     "message": "If checked, the placeholders will be filled with the default values when no value is provided. Otherwise, the placeholders will be kept in place.",
     "description": ""
+  },
+  "prefs_OptionText_max_prompt_length" : {
+    "message": "Max prompt length",
+    "description": ""
+  },
+  "prefs_OptionText_max_prompt_length_Info" : {
+    "message": "This is the maximum number of characters that can be used in a prompt. Otherwise, an error message will be displayed. The value is not editable for the ChatGPT Web Interface.",
+    "description": ""
   }
 }
