--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -642,5 +642,21 @@
   "prefs_OptionText_max_prompt_length_Info" : {
     "message": "This is the maximum number of characters that can be used in a prompt. Otherwise, an error message will be displayed. The value is not editable for the ChatGPT Web Interface.",
     "description": ""
+  },
+  "prefs_OptionText_chatgpt_web_model": {
+    "message": "ChatGPT Web model",
+    "description": ""
+  },
+  "prefs_OptionText_chatgpt_web_model_info": {
+    "message": "This is the model that will be enforced for the ChatGPT Web Interface. If none is specified or an incorrect one is provided, the default model will be set by ChatGPT on the webpage.",
+    "description": ""
+  },
+  "prefs_OptionText_chatgpt_web_tempchat": {
+    "message": "ChatGPT Web temporary chat",
+    "description": ""
+  },
+  "prefs_OptionText_chatgpt_web_tempchat_info": {
+    "message": "If checked, the temporary chat will be used in the ChatGPT Web Interface.",
+    "description": ""
   }
 }
