--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -236,7 +236,7 @@
     "description": ""
   },
   "chatgpt_win_model_warning": {
-    "message": "Vous avez choisi l'option d'utiliser ChatGPT-4, mais il semble qu'il ne se charge pas correctement. Avez-vous choisi le modèle 4 ou 4o en haut ?",
+    "message": "Vous avez choisi d'utiliser un modèle spécifique, mais il semble qu'il ne se charge pas correctement. Veuillez vérifier la valeur et réessayer. Pour l'instant, vous pouvez appuyer sur le bouton bleu pour continuer.",
     "description": ""
   },
   "chatgpt_win_custom_text": {
