chatgpt web models list added in the options page

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -666,5 +666,9 @@
   "SendingPrompt": {
     "message": "Sending prompt...",
     "description": ""
+  },
+  "AllowedValues": {
+    "message": "Allowed values",
+    "description": ""
   }
 }
