--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -12,7 +12,11 @@
     "description": ""
   },
   "prompt_reply": {
-    "message": "Rispondi",
+    "message": "Rispondi a questa email",
+    "description": ""
+  },
+  "prompt_reply_advanced": {
+    "message": "Rispondi a questo thread",
     "description": ""
   },
   "prompt_rewrite_polite": {
@@ -575,6 +579,10 @@
     "message": "Imposta a 0 se non desideri specificare la dimensione della finestra.",
     "description": ""
   },
+  "prefs_OpenAIComp_API_Key": {
+    "message": "Chiave API OpenAI Comp",
+    "description": ""
+  },
   "Optional": {
     "message": "Opzionale",
     "description": ""
@@ -585,6 +593,90 @@
   },
   "OpenChatGPTTab_Info": {
     "message": "In caso di problemi di accesso nella finestra di ThunderAI, apri ChatGPT in un nuovo tab utilizzando il pulsante a destra, accedi, quindi chiudi la scheda e continua a usare ThunderAI.",
+    "description": ""
+  },
+  "placeholder_mail_text_body": {
+    "message": "Corpo del messaggio",
+    "description": ""
+  },
+  "placeholder_mail_html_body": {
+    "message": "Corpo del messaggio in HTML",
+    "description": ""
+  },
+  "placeholder_mail_subject": {
+    "message": "Oggetto del messaggio",
+    "description": ""
+  },
+  "placeholder_selected_text": {
+    "message": "Testo selezionato",
+    "description": ""
+  },
+  "placeholder_additional_text": {
+    "message": "Testo aggiuntivo",
+    "description": ""
+  },
+  "placeholder_junk_score": {
+    "message": "Punteggio di spam",
+    "description": ""
+  },
+  "placeholder_recipients": {
+    "message": "Destinatari",
+    "description": ""
+  },
+  "placeholder_cc_list": {
+    "message": "Lista CC",
+    "description": ""
+  },
+  "placeholder_author": {
+    "message": "Autore",
+    "description": ""
+  },
+  "prefs_OptionText_placeholders_use_default_value": {
+    "message": "Segnaposti: usa valore predefinito",
+    "description": ""
+  },
+  "prefs_OptionText_placeholders_use_default_value_info": {
+    "message": "Se selezionato, i segnaposti saranno riempiti con i valori predefiniti quando non viene fornito alcun valore. Altrimenti, i segnaposti rimarranno visibili nel testo.",
+    "description": ""
+  },
+  "prefs_OptionText_max_prompt_length": {
+    "message": "Lunghezza massima del prompt",
+    "description": ""
+  },
+  "prefs_OptionText_max_prompt_length_Info": {
+    "message": "Questa è la lunghezza massima di caratteri che può essere utilizzata in un prompt. Altrimenti, verrà visualizzato un messaggio di errore. Il valore non è modificabile per l'interfaccia Web di ChatGPT.",
+    "description": ""
+  },
+  "prefs_OptionText_chatgpt_web_model": {
+    "message": "Modello Web ChatGPT",
+    "description": ""
+  },
+  "prefs_OptionText_chatgpt_web_model_info": {
+    "message": "Questo è il modello che verrà utilizzato nell'interfaccia Web di ChatGPT. Se non viene specificato o ne viene fornito uno errato, ChatGPT imposterà il modello predefinito sulla pagina Web.",
+    "description": ""
+  },
+  "prefs_OptionText_chatgpt_web_tempchat": {
+    "message": "Chat temporanea di ChatGPT",
+    "description": ""
+  },
+  "prefs_OptionText_chatgpt_web_tempchat_info": {
+    "message": "Se selezionato, la chat temporanea verrà utilizzata nell'interfaccia Web di ChatGPT.",
+    "description": ""
+  },
+  "chatgpt_btn_model": {
+    "message": "Usa il modello corrente",
+    "description": ""
+  },
+  "SendingPrompt": {
+    "message": "Invio del prompt...",
+    "description": ""
+  },
+  "AllowedValues": {
+    "message": "Valori consentiti",
+    "description": ""
+  },
+  "prefs_OptionText_btnManagePrompts_infoline": {
+    "message": "Ora puoi utilizzare segnaposti per i dati aggiuntivi!",
     "description": ""
   }
 }
