--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -694,5 +694,9 @@
   "prefs_OptionText_owl_warning": {
     "message": "It appears that at least one of your accounts is using the Owl for Exchange add-on. There is a known issue between Thunderbird and Owl, which is currently being addressed. At this time, you can use ThunderAI while composing emails, but not when reading them.",
     "description": ""
+  },
+  "prefs_OptionText_chatgpt_web_model_tooltip": {
+    "message": "Click on a value to set it.",
+    "description": ""
   }
 }
