--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -758,5 +758,13 @@
   "prompt_add_tags_full_text": {
     "message": "Analyze the following email text and generate a comma-separated list of tags that summarize its content. Use themes, key topics, and relevant descriptors as tags. Ensure the tags are concise and relevant to the email's content.\nEmail text: {%mail_text_body%}\nConsider the following details for context:\n- Sender: {%author%}\n- Recipients: {%recipients%}\n- CC list: {%cc_list%}\n- Email subject: {%mail_subject%}\nPlease base your tags on the email's text and context, ignoring unnecessary information or trivial details.",
     "description": ""
+  },
+  "placeholder_mail_tags": {
+    "message": "Mail tags",
+    "description": ""
+  },
+  "placeholder_full_tags_list": {
+    "message": "Existing tags",
+    "description": ""
   }
 }
