--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -680,7 +680,7 @@
     "description": ""
   },
   "prefs_OptionText_btnManagePrompts_infoline": {
-    "message": "Sie können jetzt zusätzliche Datenplatzhalter verwenden!",
+    "message": "Sie können zusätzliche Datenplatzhalter verwenden.",
     "description": ""
   },
   "prefs_OptionText_openai_comp_use_v1": {
