added the tag limit info text. see #183

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -814,5 +814,9 @@
   "save": {
     "message": "Save",
     "description": ""
+  },
+  "addtags_info_limit_num": {
+    "message": "This statement will be added at the end of the prompt:",
+    "description": ""
   }
 }
